refactor(#6): 엔티티 비교 방식 및 리스트 수집 방식 개선